fix: icon alignment

--- a/packages/gatsby-theme-carbon/src/components/Code/Code.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Code/Code.module.scss
@@ -106,7 +106,6 @@
   padding: $spacing-03;
   padding-left: $spacing-05;
   display: inline-flex;
-  align-items: center;
   transition: background-color $duration--fast-02;
   &:hover {
     background-color: $inverse-02;
